--- a/app/index.html
+++ b/app/index.html
@@ -2,44 +2,42 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="description" content="">
-  <meta name="author" content="">
+	<meta charset="utf-8">
 
-  <base href="/">
+	<base href="/">
 
-  <title>MeetIrl</title>
+	<title>Angular CSV Parser</title>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/app.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/app.css">
 </head>
 
 <body ng-app="app">
-  <nav class="navbar navbar-default">
-    <div class="container">
-      <div class="navbar-header">
-        <a class="navbar-brand">Angular CSV Parser</a>
-      </div>
-    </div>
-  </nav>
+<nav class="navbar navbar-default">
+	<div class="container">
+		<div class="navbar-header">
+			<a class="navbar-brand">Angular CSV Parser</a>
+		</div>
+	</div>
+</nav>
 
-  <div class="container" ui-view></div>
+<div class="container" ui-view></div>
 
-  <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
-  <script src="http://kendo.cdn.telerik.com/2016.3.914/js/kendo.ui.core.min.js"></script>
+<script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
+<script src="http://kendo.cdn.telerik.com/2016.3.914/js/kendo.ui.core.min.js"></script>
 
-  <!-- Modules -->
-  <script src="components/csv-parser/csv-parser.module.js"></script>
+<!-- Modules -->
+<script src="components/csv-parser/csv-parser.module.js"></script>
 
-  <!-- Services -->
-  <script src="components/csv-parser/services/csv-parser.service.js"></script>
+<!-- Services -->
+<script src="components/csv-parser/services/csv-parser.service.js"></script>
 
-  <!-- Directives -->
-  <script src="components/csv-parser/directives/inputChange.directive.js"></script>
+<!-- Directives -->
+<script src="components/csv-parser/directives/inputChange.directive.js"></script>
 
-  <script src="app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
