--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,9 @@
 <!-- Modules -->
 <script src="components/csv-parser/csv-parser.module.js"></script>
 
+<!-- Controllers -->
+<script src="components/csv-parser/controllers/csv-parser.controller.js"></script>
+
 <!-- Services -->
 <script src="components/csv-parser/services/csv-parser.service.js"></script>
 
